--- a/dist.ini
+++ b/dist.ini
@@ -8,8 +8,9 @@ name=File-Slurper-Temp
 [Prereqs]
 strict=0
 warnings=0
-Carp=0
+Carp=1.12
 Exporter=5.57
 File::Slurper=0
+File::Spec=0
 File::Temp=0
 
