--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,10 @@
-version=0.005
+version=0.006
 
 name=File-Slurper-Temp
 
 [@Author::PERLANCAR]
+:version=0.594
 
-:version=0.58
 [Prereqs]
 strict=0
 warnings=0
@@ -13,4 +13,8 @@ Exporter=5.57
 File::Slurper=0
 File::Spec=0
 File::Temp=0
+
+[Prereqs / TestRequires]
+Test::Exception=0
+Test::More=0.98
 
