Replace File::Spec->splitpath with File::Basename::basename (handles volume)

--- a/dist.ini
+++ b/dist.ini
@@ -10,9 +10,9 @@ strict=0
 warnings=0
 Carp=1.12
 Exporter=5.57
+File::Basename=0
 File::Slurper=0
-File::Spec=0
-File::Temp=0
+File::Temp=0.2307
 
 [Prereqs / TestRequires]
 Test::Exception=0
