--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,15 @@
-version=0.008
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
+version=0.009
 
 name=File-Slurper-Temp
 
 [@Author::PERLANCAR]
-:version=0.604
+:version=0.610
 
 [Prereqs]
 strict=0
@@ -12,7 +18,6 @@ Carp=1.12
 Exporter=5.57
 File::Basename=0
 File::Slurper=0
-# We rely implicitly on PERMS flag being obeyed, which was not present prior to this version
 File::Temp=0.2310
 
 [Prereqs / TestRequires]
